--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,16 @@
     <artifactId>Site_Lab9</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>Site_Lab9</name>
+    <description>Biblioteka do zarządzania połączeniem z bazą i autoryzacją</description>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/TWOJA_NAZWA_GITHUB/Site_Lab9</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
@@ -15,7 +25,6 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
         <dependency>
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
