--- a/pom.xml
+++ b/pom.xml
@@ -4,27 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- Informacje o projekcie -->
     <groupId>org.example</groupId>
     <artifactId>Site_Lab9</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Site_Lab9</name>
-    <description>Biblioteka do zarządzania połączeniem z bazą i autoryzacją</description>
-
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <url>https://maven.pkg.github.com/TWOJA_NAZWA_GITHUB/Site_Lab9</url>
-        </repository>
-    </distributionManagement>
-
     <properties>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <!-- Ustawienia kompilacji JDK -->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
+        <!-- Zależność: jbcrypt -->
         <dependency>
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
