--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <!-- Ustawienia kompilacji JDK -->
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- Ustawienia kompilacji JDK na wersję 17 -->
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -24,4 +24,28 @@
             <version>0.4</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Konfiguracja pluginu kompilatora do wersji JDK 17 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>  <!-- Zaktualizowana wersja -->
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <!-- Sekcja do publikacji na GitHub Packages -->
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/opilek/Site</url>
+        </repository>
+    </distributionManagement>
+
 </project>
